fix ImagePreviewModal img stretching in safari

--- a/src/components/reusables/ImagePreviewModal/ImagePreviewModal.scss
+++ b/src/components/reusables/ImagePreviewModal/ImagePreviewModal.scss
@@ -48,8 +48,10 @@ $padding: 4rem;
         img {
           pointer-events: all;
           display: block;
+          width: auto;
           max-width: 100%;
           max-height: 100vh;
+          margin: auto;
         }
       }
 
